# satellite-communication-station

./: .gitignore  Readme.md
Notes/: 1658769143435 (1).jfif  Objectives.md  rough.md
backend/: .gitignore  Readme.md  __init__.py  alerting.py  db.py  example1.py  groundstation.py  orbitpredictor.py  pyproject.toml  requirements.txt  schema.prisma  transforms.py
backend/api/: main.py
backend/api/apis/: __init__.py  radio.py  satellite.py  station.py  system.py  trackedsats.py  webbrowser.py
backend/api/apis/templates/: satellite_info.html  visibilitywindow.html
