[tool.poetry]
name = "sgcc"
version = "0.1.0"
description = ""
authors = ["redkibble"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "2.28.1"
orbit-predictor = "1.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
